--- a/index.html
+++ b/index.html
@@ -145,6 +145,10 @@
                 </div>
             </aside>
         </div>
+
+        <footer>
+            © <span id="year"></span> 考古題資料庫 · Host on GitHub Pages
+        </footer>
     </main>
 
     <!-- data first, then app -->
