--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         </div>
 
         <footer>
-            © <span id="year"></span> Host on GitHub Pages
+            © <span id="year"></span> 考古題資料庫 · Host on GitHub Pages
         </footer>
     </main>
 
