--- a/index.html
+++ b/index.html
@@ -63,6 +63,18 @@
                             <input id="q" type="search" placeholder="輸入關鍵字（標題/標籤/作者）" />
                         </div>
 
+                        <div class="select" title="科系">
+                            <span aria-hidden="true">🏫</span>
+                            <select id="department">
+                                <option value="">全部科系</option>
+                                <option value="物理系">物理系</option>
+                                <option value="化學系">化學系</option>
+                                <option value="化學所">化學所</option>
+                                <option value="資工系">資工系</option>
+                                <option value="通識課">通識課</option>
+                            </select>
+                        </div>
+
                         <div class="select" title="科目">
                             <span aria-hidden="true">📚</span>
                             <select id="subject">
