Update topic tabs and filters

--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
                 </div>
                 <div class="meta">
                     <span class="pill">快捷鍵：<span class="kbd">/</span> 搜尋</span>
-                    <span class="pill">排序：最新 / 最熱 / 最多回覆</span>
                     <span class="pill">資料來源：<span class="kbd">src/data.js</span></span>
                 </div>
             </div>
@@ -49,11 +48,10 @@
                     <!-- Tabs -->
                     <div class="tabs" role="tablist" aria-label="分類">
                         <div class="tab active" data-tab="all" role="tab" aria-selected="true">全部主題</div>
-                        <div class="tab" data-tab="mid" role="tab">期中</div>
+                        <div class="tab" data-tab="mid1" role="tab">期中一</div>
+                        <div class="tab" data-tab="mid2" role="tab">期中二</div>
                         <div class="tab" data-tab="final" role="tab">期末</div>
-                        <div class="tab" data-tab="grad" role="tab">研究所</div>
                         <div class="tab" data-tab="notes" role="tab">筆記</div>
-                        <div class="tab" data-tab="solution" role="tab">解答</div>
                     </div>
 
                     <!-- Filters -->
@@ -82,15 +80,6 @@
                             </select>
                         </div>
 
-                        <div class="select" title="排序">
-                            <span aria-hidden="true">↕️</span>
-                            <select id="sort">
-                                <option value="latest">最新回覆</option>
-                                <option value="newest">最新發文</option>
-                                <option value="hot">熱門</option>
-                                <option value="replies">回覆數</option>
-                            </select>
-                        </div>
                     </div>
 
                     <!-- List header -->
