Add quiz tab and regroup materials

--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
                         <div class="tab" data-tab="mid2" role="tab">期中二</div>
                         <div class="tab" data-tab="final" role="tab">期末</div>
                         <div class="tab" data-tab="notes" role="tab">筆記</div>
+                        <div class="tab" data-tab="quiz" role="tab">小考</div>
+                        <div class="tab" data-tab="other" role="tab">其他</div>
                     </div>
 
                     <!-- Filters -->
