Organize analysis and sidebar

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
                     <!-- List header -->
                     <div class="list-head">
-                        <div>狀態</div>
+                        <div>分類</div>
                         <div>標題</div>
                     </div>
 
@@ -100,14 +100,6 @@
 
             <!-- Sidebar -->
             <aside class="side">
-                <div class="card">
-                    <div class="hd">
-                        <h3>本版近期活躍整理者</h3>
-                        <span class="muted-xs">Top 3</span>
-                    </div>
-                    <div class="bd" id="topAuthors"></div>
-                </div>
-
                 <div class="card" id="new">
                     <div class="hd">
                         <h3>如何新增資料</h3>
